ADD new feature

--- a/subjects/civil.html
+++ b/subjects/civil.html
@@ -3,19 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AIML Subjects | College Notes</title>
+  <title>Civil Subjects | College Notes</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body class="library-bg">
   <div class="container">
-    <h1 class="title">CIVIL Subjects</h1>
+    <h1 class="title">Civil Subjects</h1>
     <div class="subject-box">
-      <button class="glass-btn subject-btn">Artificial Intelligence</button>
-      <button class="glass-btn subject-btn">Machine Learning</button>
-      <button class="glass-btn subject-btn">Python Programming</button>
-      <button class="glass-btn subject-btn">Data Structures</button>
-      <button class="glass-btn subject-btn">Database Management</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Artificial Intelligence')">Artificial Intelligence</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Machine Learning')">Machine Learning</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Python Programming')">Python Programming</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Data Structures')">Data Structures</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Database Management')">Database Management</button>
     </div>
   </div>
+
+  <script src="../script.js"></script>
 </body>
 </html>
