--- a/subjects/aiml.html
+++ b/subjects/aiml.html
@@ -10,12 +10,14 @@
   <div class="container">
     <h1 class="title">AIML Subjects</h1>
     <div class="subject-box">
-      <button class="glass-btn subject-btn">Artificial Intelligence</button>
-      <button class="glass-btn subject-btn">Machine Learning</button>
-      <button class="glass-btn subject-btn">Python Programming</button>
-      <button class="glass-btn subject-btn">Data Structures</button>
-      <button class="glass-btn subject-btn">Database Management</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Artificial Intelligence')">Artificial Intelligence</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Machine Learning')">Machine Learning</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Python Programming')">Python Programming</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Data Structures')">Data Structures</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('Database Management')">Database Management</button>
     </div>
   </div>
+
+  <script src="../script.js"></script>
 </body>
 </html>
