--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <button class="glass-btn" onclick="selectYear(3)">3rd Year</button>
       <button class="glass-btn" onclick="selectYear(4)">4th Year</button>
     </div>
+
+    <button class="queries-btn" onclick="window.open('https://formsubmit.co/el/vacame', '_blank')">Queries</button>
   </div>
 
   <script src="script.js"></script>
