Update notes wallet with latest changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
       <button class="glass-btn" onclick="selectYear(4)">4th Year</button>
     </div>
 
+    <div class="rating-section">
+      <h3>Rate Us</h3>
+      <div class="stars">
+        <span class="star" data-value="1">☆</span>
+        <span class="star" data-value="2">☆</span>
+        <span class="star" data-value="3">☆</span>
+        <span class="star" data-value="4">☆</span>
+        <span class="star" data-value="5">☆</span>
+      </div>
+      <button id="submit-rating" class="glass-btn">Submit Rating</button>
+      <div id="rating-display">
+        <p>Total Ratings: <span id="rating-count">0</span></p>
+        <p>Average Rating: <span id="rating-average">0</span></p>
+      </div>
+    </div>
+
     <button class="queries-btn" onclick="window.open('https://formsubmit.co/el/vacame', '_blank')">Queries</button>
   </div>
 
