Add feedback section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1024">
   <title>Select Year | College Notes</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -34,6 +34,7 @@
       </div>
     </div>
 
+    <button class="feedback-btn" onclick="window.open('https://formsubmit.co/el/yemoga', '_blank')">Feedback</button>
     <button class="queries-btn" onclick="window.open('https://formsubmit.co/el/vacame', '_blank')">Queries</button>
   </div>
 
