--- a/branch.html
+++ b/branch.html
@@ -6,7 +6,7 @@
   <title>Select Branch | College Notes</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="library-bg">
+<body class="library-bg-branch">
   <div class="container">
     <h1 class="title">Select Your Branch</h1>
     <div class="button-grid">
