--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Select Year | College Notes</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="library-bg">
+<body class="library-bg-year">
   <div class="container">
     <h1 class="title">Welcome to College Notes</h1>
     <p class="subtitle">Select your Year of Study</p>
