--- a/options.html
+++ b/options.html
@@ -6,7 +6,7 @@
   <title>Select Option | College Notes</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="library-bg">
+<body class="library-bg-options">
   <div class="container">
     <h1 class="title">Select Option</h1>
     <p class="subtitle">Choose what you want for <span id="subjectName"></span></p>
