--- a/subjects/mechanical.html
+++ b/subjects/mechanical.html
@@ -6,7 +6,7 @@
   <title>Mechanical Subjects | College Notes</title>
   <link rel="stylesheet" href="../style.css">
 </head>
-<body class="library-bg">
+<body class="library-bg-subject">
   <div class="container">
     <h1 class="title">Mechanical Subjects</h1>
     <div class="subject-box">
