--- a/subjects/ise.html
+++ b/subjects/ise.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1 class="title">ISE Subjects</h1>
     <div class="subject-box">
-      <button class="glass-btn subject-btn" onclick="selectSubject('a')">a</button>
+      <button class="glass-btn subject-btn" onclick="selectSubject('a')">AIML</button>
       <button class="glass-btn subject-btn" onclick="selectSubject('b')">b</button>
       <button class="glass-btn subject-btn" onclick="selectSubject('c')">c</button>
       <button class="glass-btn subject-btn" onclick="selectSubject('d')">d</button>
