--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body class="library-bg-year">
   <div class="container">
-    <h1 class="title">Welcome to College Notes</h1>
-    <p class="subtitle">Select your Year of Study</p>
+    <button id="theme-toggle" class="theme-toggle" aria-label="Switch to dark mode">🌙</button>
+    <h1 class="title">DBIT Notes Wallet</h1>
+    <p class="subtitle">Select Your Year</p>
+    <div class="search-container">
+      <input type="text" id="search-input" placeholder="Search years or options..." aria-label="Search">
+    </div>
 
     <div class="button-grid">
       <button class="glass-btn" onclick="selectYear(1)">1st Year</button>
@@ -18,24 +22,30 @@
       <button class="glass-btn" onclick="selectYear(4)">4th Year</button>
     </div>
 
+    <div class="recent-activities">
+      <h3>Recent Activities</h3>
+      <button id="clear-activities" class="glass-btn clear-btn" onclick="clearRecentActivities()">Clear All</button>
+      <div id="recent-list"></div>
+    </div>
+
     <div class="rating-section">
-      <h3>Rate Us</h3>
+      <h3>Rate Our App</h3>
       <div class="stars">
-        <span class="star" data-value="1">☆</span>
-        <span class="star" data-value="2">☆</span>
-        <span class="star" data-value="3">☆</span>
-        <span class="star" data-value="4">☆</span>
-        <span class="star" data-value="5">☆</span>
+        <span class="star" data-value="1" tabindex="0" role="button" aria-label="Rate 1 star">☆</span>
+        <span class="star" data-value="2" tabindex="0" role="button" aria-label="Rate 2 stars">☆</span>
+        <span class="star" data-value="3" tabindex="0" role="button" aria-label="Rate 3 stars">☆</span>
+        <span class="star" data-value="4" tabindex="0" role="button" aria-label="Rate 4 stars">☆</span>
+        <span class="star" data-value="5" tabindex="0" role="button" aria-label="Rate 5 stars">☆</span>
       </div>
-      <button id="submit-rating" class="glass-btn">Submit Rating</button>
+      <button id="submit-rating" class="glass-btn" aria-label="Submit your rating">Submit Rating</button>
       <div id="rating-display">
         <p>Total Ratings: <span id="rating-count">0</span></p>
         <p>Average Rating: <span id="rating-average">0</span></p>
       </div>
     </div>
 
-    <button class="feedback-btn" onclick="window.open('https://formsubmit.co/el/yemoga', '_blank')">Feedback</button>
-    <button class="queries-btn" onclick="window.open('https://formsubmit.co/el/vacame', '_blank')">Queries</button>
+    <a href="https://formsubmit.co/el/yemoga" target="_blank" class="feedback-btn">Feedback</a>
+    <a href="https://formsubmit.co/el/vacame" target="_blank" class="queries-btn">Queries</a>
   </div>
 
   <script>
