--- a/subjects/aiml.html
+++ b/subjects/aiml.html
@@ -8,7 +8,11 @@
 </head>
 <body class="library-bg-subject">
   <div class="container">
+    <button id="theme-toggle" class="theme-toggle" aria-label="Switch to dark mode">🌙</button>
     <h1 class="title">AIML Subjects</h1>
+    <div class="search-container">
+      <input type="text" id="search-input" placeholder="Search subjects..." aria-label="Search">
+    </div>
     <div class="subject-box">
       <button class="glass-btn subject-btn" onclick="selectSubject('a')">a</button>
       <button class="glass-btn subject-btn" onclick="selectSubject('b')">b</button>
